--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,6 @@
+# set default shell PROPERLY and allow pbcopy/pbpaste
+set-option -g default-command "reattach-to-user-namespace -l \"$SHELL\""
+
 ################################################################################
 # Window settings
 # report 256 colors
@@ -5,8 +8,6 @@ set -g default-terminal "screen-256color"
 # Automatically set window title
 set-window-option -g automatic-rename on
 set-option -g set-titles on
-# This makes pbcopy/pbpaste work in tmux
-set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 ################################################################################
 # Environment settings
@@ -31,5 +32,4 @@ set-option -g mouse-resize-pane on
 # Scroll your way into copy mode (scrollback buffer)
 # and select text for copying with the mouse
 setw -g mode-mouse on
-
 
