--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,13 +1,12 @@
-# set default shell PROPERLY and allow pbcopy/pbpaste
-set-option -g default-command "reattach-to-user-namespace -l \"$SHELL\""
-
 ################################################################################
 # Window settings
 # report 256 colors
 set -g default-terminal "screen-256color"
+# set default shell PROPERLY and allow pbcopy/pbpaste
+set -g default-command "reattach-to-user-namespace -l \"$SHELL\""
 # Automatically set window title
-set-window-option -g automatic-rename on
-set-option -g set-titles on
+setw -g automatic-rename
+#set -g set-titles
 
 ################################################################################
 # Environment settings
@@ -16,6 +15,10 @@ set -g update-environment -r
 
 ################################################################################
 # Keyboard settings
+# change prefix key to ctrl-a
+unbind-key C-b
+set -g prefix C-a
+bind-key C-a last-window
 # '0' is at the wrong end of the keyboard
 set -g base-index 1
 set -g status-keys vi
@@ -26,9 +29,9 @@ bind r source-file ~/.tmux.conf
 ################################################################################
 # Mouse settings
 # Just click it
-set-option -g mouse-select-pane on
-set-option -g mouse-select-window on
-set-option -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
+set -g mouse-resize-pane on
 # Scroll your way into copy mode (scrollback buffer)
 # and select text for copying with the mouse
 setw -g mode-mouse on
