can't reattach to tmux namespace for some reason, commenting fixes (couldn't create new windows with it on). add zcompdump to gitignore

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,11 +2,10 @@
 # Window settings
 # report 256 colors
 set -g default-terminal "screen-256color"
-# set default shell PROPERLY and allow pbcopy/pbpaste
-set -g default-command "reattach-to-user-namespace -l \"$SHELL\""
+# set default shell PROPERLY and allow pbcopy/pbpaste  --  BROKEN
+#set -g default-command "reattach-to-user-namespace -l \"$SHELL\""
 # Automatically set window title
 setw -g automatic-rename
-#set -g set-titles
 
 ################################################################################
 # Environment settings
