tmux explicitly turn off titles, update install success, update update script text and success

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,7 @@ set -g default-terminal "screen-256color"
 #set -g default-command "reattach-to-user-namespace -l \"$SHELL\""
 # Automatically set window title
 setw -g automatic-rename
+set -g set-titles off
 
 ################################################################################
 # Environment settings
