add nvm as sub-repo, installs nvm, runs nvm if symlinked

--- a/.gitmodules
+++ b/.gitmodules
@@ -82,3 +82,6 @@
 [submodule "vim/bundle/vim-ruby"]
 	path = vim/bundle/vim-ruby
 	url = https://github.com/vim-ruby/vim-ruby.git
+[submodule "nvm"]
+	path = nvm
+	url = https://github.com/walkah/nvm.git
