--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,7 @@
 # report 256 colors
 set -g default-terminal "screen-256color"
 # set default shell PROPERLY and allow pbcopy/pbpaste  --  BROKEN
-#set -g default-command "reattach-to-user-namespace -l \"$SHELL\""
+set -g default-command "reattach-to-user-namespace -l \"$SHELL\""
 # Automatically set window title
 setw -g automatic-rename
 set -g set-titles off
