set yankring manual check variable, change tmux window sizing method to aggressive

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,9 @@
 ################################################################################
+# Environment settings
+# Don't lose track of SSH_AGENT etc. from parent environment.
+set -g update-environment -r
+
+################################################################################
 # Window settings
 # report 256 colors
 set -g default-terminal "screen-256color"
@@ -7,11 +12,8 @@ set -g default-command "reattach-to-user-namespace -l \"$SHELL\""
 # Automatically set window title
 setw -g automatic-rename
 set -g set-titles off
-
-################################################################################
-# Environment settings
-# Don't lose track of SSH_AGENT etc. from parent environment.
-set -g update-environment -r
+# expand tmux window size if no tiny clients connected
+setw -g aggressive-resize on
 
 ################################################################################
 # Keyboard settings
