add new netrwhist vim file to gitignore, revert to c-b binding in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,9 +18,9 @@ setw -g aggressive-resize on
 ################################################################################
 # Keyboard settings
 # change prefix key to ctrl-a
-unbind-key C-b
-set -g prefix C-a
-bind-key C-a last-window
+#unbind-key C-b
+#set -g prefix C-a
+#bind-key C-a last-window
 # '0' is at the wrong end of the keyboard
 set -g base-index 1
 set -g status-keys vi
