--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,8 +7,6 @@ set -g update-environment -r
 # Window settings
 # report 256 colors
 set -g default-terminal "screen-256color"
-# set default shell PROPERLY and allow pbcopy/pbpaste  --  BROKEN
-set -g default-command "reattach-to-user-namespace -l \"$SHELL\""
 # Automatically set window title
 setw -g automatic-rename
 set -g set-titles off
@@ -18,9 +16,9 @@ setw -g aggressive-resize on
 ################################################################################
 # Keyboard settings
 # change prefix key to ctrl-a
-#unbind-key C-b
-#set -g prefix C-a
-#bind-key C-a last-window
+unbind-key C-b
+set -g prefix C-a
+bind-key C-a last-window
 # '0' is at the wrong end of the keyboard
 set -g base-index 1
 set -g status-keys vi
