add git to cvsignore, add colored msgs to bootstrap.zsh, organize bash aliases

--- a/.cvsignore
+++ b/.cvsignore
@@ -16,6 +16,7 @@ Desktop.ini
 
 ################################################################################
 # version control
+.git/
 /.hg/*
 */.hg/*
 .svn/
