fix vim paths in gitignore, add path to system mysql bin for osx zshenv

--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,10 @@
 .zhistory
 .zcompdump
 
-.vim/.netrwhist
-.vim/.vimrc.old
-.vim/tags
-.vim/_temp/
-.vim/_backup/
+vim/.netrwhist
+vim/.vimrc.old
+vim/tags
+vim/_temp/
+vim/_backup/
 vim/.yankring-history_v2.txt
 vim/.netrwhist
