oops committed junk file, update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,9 @@
 vim/.netrwhist
 vim/.vimrc.old
 vim/tags
+vim/_temp
 vim/_temp/
+vim/_backup
 vim/_backup/
 vim/.yankring-history_v2.txt
 vim/.netrwhist
