--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.DS_Store
 *.swp
 
 .zsh_history
@@ -6,10 +7,8 @@
 
 vim/.netrwhist
 vim/.vimrc.old
-vim/tags
-vim/_temp
-vim/_temp/
-vim/_backup
-vim/_backup/
 vim/.yankring-history_v2.txt
-vim/.netrwhist
+vim/_temp/
+vim/_backup/
+vim/bundle/
+vim/bundle/*
