initial commit of debian

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 vim/.netrwhist
 vim/.vimrc.old
 vim/.yankring-history_v2.txt
-vim/_temp/
-vim/_backup/
+vim/temp/*
+vim/backup/*
 vim/bundle/
 vim/bundle/*
