--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,16 @@
+# OSX crap
 .DS_Store
 *.swp
 
+# ZSH crap
 .zsh_history
 .zhistory
 .zcompdump
 
-vim/.netrwhist
-vim/.vimrc.old
-vim/.yankring-history_v2.txt
+# VIM crap
+.netrwhist
+.vimrc.old
+.yankring-history_v2.txt
 vim/temp/*
 vim/backup/*
 vim/bundle
