move cvsignore to cvs folder, update gitignore for this repo, update this repo's readme

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,45 @@
-# OSX crap
+################################################################################
+# OSX
 .DS_Store
 *.swp
+._*
+.Spotlight-V100
+.Trashes
 
+################################################################################
+# Windows
+Thumbs.db
+Desktop.ini
+
+################################################################################
+# version control
+.git/
+/.hg/*
+*/.hg/*
+.svn/
+
+################################################################################
+# editors
+*.swp
+/*.sublime-project
+*.sublime-workspace
+*.tmproj
+*.tmproject
+tmtags
+
+################################################################################
+# real junk, temp files
+.sass-cache
+*~
+*.rbc
+
+################################################################################
 # ZSH crap
 .zsh_history
 .zhistory
 .zcompdump
 
+################################################################################
 # VIM crap
 .netrwhist
 .vimrc.old
