add vag support to dnsmasq, reverse vim supertab tab key cycling, dnsmasq bootstrapping works

--- a/dnsmasq/dnsmasq.conf
+++ b/dnsmasq/dnsmasq.conf
@@ -625,5 +625,5 @@
 #conf-file=/etc/dnsmasq.more.conf
 #conf-dir=/etc/dnsmasq.d
 #
-address=/.dev/127.0.0.1
+address=/.dev/.vag/127.0.0.1
 listen-address=127.0.0.1
