--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 ################################################################################
 # OSX
 .DS_Store
-*.swp
 ._*
 .Spotlight-V100
 .Trashes
+*.swp
 
 ################################################################################
 # Windows
@@ -29,7 +29,7 @@ tmtags
 
 ################################################################################
 # real junk, temp files
-.sass-cache
+.sass-cache/
 *~
 *.rbc
 
@@ -41,10 +41,10 @@ tmtags
 
 ################################################################################
 # VIM crap
-.netrwhist
-.vimrc.old
-.yankring-history_v2.txt
 vim/temp/*
 vim/backup/*
 vim/bundle
 vim/bundle/*
+.netrwhist
+.vimrc.old
+.yankring-history_v2.txt
