--- a/osx/Brewfile
+++ b/osx/Brewfile
@@ -1,12 +1,16 @@
+# standard homebrew formula
 install ack
 install autojump
 install php54
 install php54-mcrypt
+install curl
 install curl-ca-bundle
-install ctags-exuberant
+install ctags
+install direnv
 install dnsmasq
 install git
 install git-extras
+install hub
 install irssi
 install jsonpp
 install macvim --override-system-vim
@@ -22,6 +26,7 @@ install rsync
 install ssh-copy-id
 install the_silver_searcher
 install tree
+install wget
 install zsh
 install zsh-completions
 
@@ -39,3 +44,8 @@ install vagrant-completion
 
 tap phinze/homebrew-cask
 install brew-cask
+cask install google-chrome
+cask install caffeine
+cask install transmit
+cask install vagrant
+cask install virtualbox
