wpcliup is only for linux, add solarized submodule, update x11.sh refs to solarized

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "zsh/zsh-syntax-highlighting"]
 	path = zsh/zsh-syntax-highlighting
 	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
+[submodule "solarized"]
+	path = solarized
+	url = https://github.com/altercation/solarized.git
