--- a/osx/Brewfile
+++ b/osx/Brewfile
@@ -46,10 +46,20 @@ install vagrant-completion
 
 tap phinze/homebrew-cask
 install brew-cask
-cask install google-chrome
+cask install alfred
 cask install caffeine
+cask install dropbox
+cask install firefox
+cask install google-chrome
+cask install google-drive
+cask install kaleidoscope
 cask install keyremap4macbook
+cask install lastpass-universal
 cask install noejectdelay
+cask install nosleep
+cask install nvalt
+cask install skype
 cask install transmit
 cask install vagrant
 cask install virtualbox
+cask install vlc
