add z submodule, use chruby when available, add bootstrap for linux chruby and php, add emojish ruby bin

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "gnome-terminal-colors-solarized"]
 	path = gnome-terminal-colors-solarized
 	url = https://github.com/sigurdga/gnome-terminal-colors-solarized.git
+[submodule "z"]
+	path = z
+	url = https://github.com/rupa/z.git
