--- a/linux/compton/compton.conf
+++ b/linux/compton/compton.conf
@@ -1,3 +1,7 @@
+backend = "glx";
+refresh-rate = 0;
+vsync = "opengl";
+
 shadow = false;
 no-dnd-shadow = true;
 no-dock-shadow = true;
@@ -24,25 +28,24 @@ fading = false;
 fade-in-step = 0.03;
 fade-out-step = 0.03;
 fade-exclude = [ ];
-backend = "xrender";
 mark-wmwin-focused = true;
 mark-ovredir-focused = true;
 detect-rounded-corners = true;
 detect-client-opacity = true;
-refresh-rate = 0;
-vsync = "none";
 dbe = false;
+
+# Painting on X Composite overlay window. Recommended.
 paint-on-overlay = true;
+
 focus-exclude = [ "class_g = 'Cairo-clock'" ];
 detect-transient = true;
 detect-client-leader = true;
 invert-color-include = [ ];
 glx-copy-from-front = false;
 glx-swap-method = "undefined";
-wintypes : 
-{
-  tooltip : 
-  {
+
+wintypes: {
+  tooltip: {
     fade = true;
     shadow = false;
     opacity = 0.75;
