--- a/linux/conky/.conkyrc
+++ b/linux/conky/.conkyrc
@@ -56,6 +56,8 @@ TEXT
 ${color 88bbee}SYSTEM ${color 1c1c1c}${stippled_hr 2}${color aaccdd}
 Kernel:      $alignr${kernel} ${machine}
 Host:        $alignr$nodename
+Ethernet:    $alignr${addr wlan0}
+WiFi:        $alignr${addr wlp3s0}
 Uptime:      $alignr$uptime
 Load:        $alignr${loadavg}
 Temperature: $alignr${acpitemp} F
