add terminator config

--- a/linux/terminator/config
+++ b/linux/terminator/config
@@ -1,4 +1,8 @@
+# Terminator config
+# ConfigObj syntax
+
 [global_config]
+  # grab colors from base16-builder generated output
   title_transmit_bg_color = "#cf6a4c"
   title_inactive_bg_color = "#5f5a60"
   focus = system
@@ -7,17 +11,22 @@
 
 [profiles]
   [[default]]
+    # terminal settings
+    show_titlebar = False
+    scrollback_infinite = True
+    xterm = "xterm-256color"
+
+    # font
+    use_system_font = False
+    font = "Fira Mono for Powerline 10"
     antialias = True
     allow_bold = True
+
+    # grab colors from base16-builder generated output
     background_color = "#1e1e1e"
     cursor_color = "#a7a7a7"
-    font = "Fira Mono for Powerline 10"
     foreground_color = "#a7a7a7"
     palette = "#1e1e1e:#cf6a4c:#8f9d6a:#f9ee98:#7587a6:#9b859d:#afc4db:#a7a7a7:#5f5a60:#cf6a4c:#8f9d6a:#f9ee98:#7587a6:#9b859d:#afc4db:#ffffff"
-    scrollback_infinite = True
-    show_titlebar = False
-    use_system_font = False
-    xterm = "xterm-256color"
 
 [layouts]
   [[default]]
@@ -32,3 +41,4 @@
 
 [plugins]
 
+# vim: set ft=config :
