--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "zsh/zsh-autosuggestions"]
 	path = zsh/plugins/zsh-autosuggestions
 	url = https://github.com/tarruda/zsh-autosuggestions
+[submodule "zsh/plugins/opp.zsh"]
+	path = zsh/plugins/opp.zsh
+	url = git@github.com:hchbaw/opp.zsh.git
