no gtk3 compton shadows

--- a/linux/compton/compton.conf
+++ b/linux/compton/compton.conf
@@ -13,7 +13,10 @@ shadow-opacity = 0.7;
 shadow-red = 0.0;
 shadow-green = 0.0;
 shadow-blue = 0.0;
-shadow-exclude = [ "name = 'Notification'", "class_g = 'Conky'", "class_g ?= 'Notify-osd'", "class_g = 'Cairo-clock'" ];
+
+# no shadows on any gtk3 apps, conky, etc
+shadow-exclude = [ "_GTK_FRAME_EXTENTS@:c", "name = 'Notification'", "class_g = 'Conky'", "class_g ?= 'Notify-osd'", "class_g = 'Cairo-clock'" ];
+
 shadow-ignore-shaped = true;
 menu-opacity = 1.0;
 inactive-opacity = 1.0;
