--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "fonts/powerline"]
 	path = fonts/powerline
 	url = git@github.com:powerline/fonts.git
+[submodule "fonts/mplus"]
+	path = fonts/mplus
+	url = git@github.com:larzconwell/m1-powerline-font.git
