--- a/linux/terminator/config
+++ b/linux/terminator/config
@@ -1,4 +1,5 @@
 [global_config]
+  dbus = True
   enabled_plugins = TerminalShot, APTURLHandler, LaunchpadCodeURLHandler, LaunchpadBugURLHandler
   focus = system
   sticky = True
