add keypass desktop entry, suppress dialogs in terminator

--- a/linux/terminator/config
+++ b/linux/terminator/config
@@ -3,6 +3,7 @@
   enabled_plugins = TerminalShot, APTURLHandler, LaunchpadCodeURLHandler, LaunchpadBugURLHandler
   focus = system
   sticky = True
+  suppress_multiple_term_dialog = True
   title_inactive_bg_color = "#5f5a60"
   title_transmit_bg_color = "#cf6a4c"
 [keybindings]
