--- a/irssi/config
+++ b/irssi/config
@@ -1,58 +1,127 @@
-settings = {
-  core = {
-    real_name = "davidosomething";
-    user_name = "davidosomething";
-    nick = "davidosomething";
-  };
-  "fe-text" = { actlist_sort = "refnum"; };
-};
-
-ignores = ({
-  level = "JOINS PARTS QUITS MODES";
-  channels = (
-    "#archlinux",
-    "#javascript",
-    "#vim"
-  );
-});
-
 servers = (
   { address = "irc.dal.net"; chatnet = "DALnet"; port = "6667"; },
   { address = "irc.efnet.org"; chatnet = "EFNet"; port = "6667"; },
   { address = "irc.esper.net"; chatnet = "EsperNet"; port = "6667"; },
-  { address = "chat.freenode.net"; chatnet = "Freenode"; port = "6667"; },
-  { address = "irc.gamesurge.net"; chatnet = "GameSurge"; port = "6667"; },
+  {
+    address = "chat.freenode.net";
+    chatnet = "Freenode";
+    port = "6667";
+    use_ssl = "no";
+    ssl_verify = "no";
+    autoconnect = "yes";
+  },
+  {
+    address = "irc.gamesurge.net";
+    chatnet = "GameSurge";
+    port = "6667";
+  },
   { address = "eu.irc6.net"; chatnet = "IRCnet"; port = "6667"; },
   { address = "open.ircnet.net"; chatnet = "IRCnet"; port = "6667"; },
-  { address = "irc.ircsource.net"; chatnet = "IRCSource"; port = "6667"; },
+  {
+    address = "irc.ircsource.net";
+    chatnet = "IRCSource";
+    port = "6667";
+  },
   { address = "irc.netfuze.net"; chatnet = "NetFuze"; port = "6667"; },
   { address = "irc.oftc.net"; chatnet = "OFTC"; port = "6667"; },
-  { address = "irc.quakenet.org"; chatnet = "QuakeNet"; port = "6667"; },
+  { 
+    address = "irc.quakenet.org";
+    chatnet = "QuakeNet";
+    port = "6667";
+  },
   { address = "irc.rizon.net"; chatnet = "Rizon"; port = "6667"; },
   { address = "silc.silcnet.org"; chatnet = "SILC"; port = "706"; },
-  { address = "irc.undernet.org"; chatnet = "Undernet"; port = "6667"; }
+  { 
+    address = "irc.undernet.org";
+    chatnet = "Undernet";
+    port = "6667";
+  }
 );
 
 chatnets = {
-  DALnet = { type = "IRC"; max_kicks = "4"; max_msgs = "20"; max_whois = "30"; };
-  EFNet = { type = "IRC"; max_kicks = "1"; max_msgs = "4"; max_whois = "1"; };
-  EsperNet = { type = "IRC"; max_kicks = "1"; max_msgs = "4"; max_whois = "1"; };
-  Freenode = { type = "IRC"; max_kicks = "1"; max_msgs = "4"; max_whois = "1"; };
-  GameSurge = { type = "IRC"; max_kicks = "1"; max_msgs = "1"; max_whois = "1"; };
-  IRCnet = { type = "IRC"; max_kicks = "1"; max_msgs = "1"; max_whois = "1"; };
-  IRCSource = { type = "IRC"; max_kicks = "1"; max_msgs = "4"; max_whois = "1"; };
-  NetFuze = { type = "IRC"; max_kicks = "1"; max_msgs = "1"; max_whois = "1"; };
+  DALnet = {
+    type = "IRC";
+    max_kicks = "4";
+    max_msgs = "20";
+    max_whois = "30";
+  };
+  EFNet = { 
+    type = "IRC";
+    max_kicks = "1";
+    max_msgs = "4";
+    max_whois = "1";
+  };
+  EsperNet = {
+    type = "IRC";
+    max_kicks = "1";
+    max_msgs = "4";
+    max_whois = "1";
+  };
+  Freenode = {
+    type = "IRC";
+    max_kicks = "1";
+    max_msgs = "4";
+    max_whois = "1";
+  };
+  GameSurge = {
+    type = "IRC";
+    max_kicks = "1";
+    max_msgs = "1";
+    max_whois = "1";
+  };
+  IRCnet = { 
+    type = "IRC";
+    max_kicks = "1";
+    max_msgs = "1";
+    max_whois = "1";
+  };
+  IRCSource = {
+    type = "IRC";
+    max_kicks = "1";
+    max_msgs = "4";
+    max_whois = "1";
+  };
+  NetFuze = {
+    type = "IRC";
+    max_kicks = "1";
+    max_msgs = "1";
+    max_whois = "1";
+  };
   OFTC = { type = "IRC"; max_kicks = "1"; max_msgs = "1"; max_whois = "1"; };
-  QuakeNet = { type = "IRC"; max_kicks = "1"; max_msgs = "1"; max_whois = "1"; };
-  Rizon = { type = "IRC"; max_kicks = "1"; max_msgs = "1"; max_whois = "1"; };
+  QuakeNet = {
+    type = "IRC";
+    max_kicks = "1";
+    max_msgs = "1";
+    max_whois = "1";
+  };
+  Rizon = { 
+    type = "IRC";
+    max_kicks = "1";
+    max_msgs = "1";
+    max_whois = "1";
+  };
   SILC = { type = "SILC"; };
-  Undernet = { type = "IRC"; max_kicks = "1"; max_msgs = "1"; max_whois = "1"; };
+  Undernet = {
+    type = "IRC";
+    max_kicks = "1";
+    max_msgs = "1";
+    max_whois = "1";
+  };
 };
 
 channels = (
-  { name = "#archlinux"; chatnet = "Freenode"; autojoin = "Yes"; },
-  { name = "#javascript"; chatnet = "Freenode"; autojoin = "Yes"; },
-  { name = "#vim"; chatnet = "Freenode"; autojoin = "Yes"; },
+  { name = "#lobby"; chatnet = "EsperNet"; autojoin = "No"; },
+  { name = "#freenode"; chatnet = "Freenode"; autojoin = "No"; },
+  { name = "#irssi"; chatnet = "Freenode"; autojoin = "No"; },
+  { name = "#gamesurge"; chatnet = "GameSurge"; autojoin = "No"; },
+  { name = "#irssi"; chatnet = "IRCNet"; autojoin = "No"; },
+  { name = "#ircsource"; chatnet = "IRCSource"; autojoin = "No"; },
+  { name = "#netfuze"; chatnet = "NetFuze"; autojoin = "No"; },
+  { name = "#oftc"; chatnet = "OFTC"; autojoin = "No"; },
+  { name = "silc"; chatnet = "SILC"; autojoin = "No"; },
+  { name = "#archlinux"; chatnet = "freenode"; autojoin = "yes"; },
+  { name = "#javascript"; chatnet = "freenode"; autojoin = "yes"; },
+  { name = "#vim"; chatnet = "freenode"; autojoin = "yes"; }
 );
 
 aliases = {
@@ -307,5 +376,12 @@ statusbar = {
     };
   };
 };
-
-# vim: syn=javascript :
+settings = {
+  core = {
+    real_name = "davidosomething";
+    user_name = "davidosomething";
+    nick = "davidosomething";
+  };
+  "fe-text" = { actlist_sort = "refnum"; };
+};
+ignores = ( { level = "JOINS PARTS QUITS"; } );
